Start implementing unit testing with catch2
Immediately found 2 bugs:
- Symbol string was not being capitalise as expected.
- Converting float to string was not correctly stripping out decimal
  places and the decimal point if non were required.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -172,5 +172,12 @@ target_compile_options(
   PUBLIC "$<$<CONFIG:RELEASE>:${INCH_RELEASE_FLAGS}>"
   )
 
+# Unit testing wit Catch2
+option(UNIT_TESTS "Build unit tests" ON)
+if(UNIT_TESTS)
+  enable_testing()
+  add_subdirectory(tests)
+endif()
+
 # Setup an install target
 install(TARGETS ${PROJECT_NAME} DESTINATION bin)
