--- a/.travis.yml
+++ b/.travis.yml
@@ -115,3 +115,15 @@ script:
   - cmake --build ../Release-build
   - cd ../Release-build
   - ctest -V
+
+after_success:
+  # Create lcov report
+  # capture coverage info
+  - lcov --directory . --capture --output-file coverage.info
+  # filter out system and test files.
+  - lcov --remove coverage.info '/usr/*' '*/tests/*' --output-file coverage.info
+  # output coverage data for debugging (optional)
+  - lcov --list coverage.info
+  # Uploading to CodeCov
+  # '-f' specifies file(s) to use and disables manual coverage gathering and file search which has already been done above
+  - bash <(curl -s https://codecov.io/bash) -f coverage.info || echo "Codecov did not collect coverage reports"
