Make sure lcov is installed

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,7 @@ matrix:
           packages:
             - ['g++-6']
             - ninja-build
+            - lcov
       env: COMPILER='g++-6'
 
     - os: linux
@@ -33,6 +34,7 @@ matrix:
           packages:
             - ['g++-7']
             - ninja-build
+            - lcov
       env: COMPILER='g++-7'
 
     - os: linux
@@ -43,6 +45,7 @@ matrix:
           packages:
             - ['g++-8']
             - ninja-build
+            - lcov
       env: COMPILER='g++-8'
 
 
@@ -57,6 +60,7 @@ matrix:
     #      packages:
     #  - ['clang-3.8']
     #  - ninja-build
+    #  - lcov
     #  env: COMPILER='clang++-3.8'
 
     - os: linux
@@ -67,6 +71,7 @@ matrix:
           packages:
             - ['clang-4.0']
             - ninja-build
+            - lcov
       env: COMPILER='clang++-4.0'
 
     - os: linux
@@ -77,6 +82,7 @@ matrix:
           packages:
             - ['clang-5.0']
             - ninja-build
+            - lcov
       env: COMPILER='clang++-5.0'
 
     - os: linux
@@ -87,6 +93,7 @@ matrix:
           packages:
             - ['clang-6.0']
             - ninja-build
+            - lcov
       env: COMPILER='clang++-6.0'
 
     # Version 7 looks to be too new for Xenial
@@ -98,6 +105,7 @@ matrix:
     #      packages:
     #  - ['clang-7.0']
     #  - ninja-build
+    #  - lcov
     #  env: COMPILER='clang++-7.0'
 
 
