Comment out code coverage config, can't get it to work
I am missing something related to the fact that we compile against
multiple compilers and versions and create different build types. I'll
come back to this another time hence why I've left it commented rather
than simply deleting.

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ matrix:
           packages:
             - ['g++-6']
             - ninja-build
-            - lcov
+            #- lcov
       env: COMPILER='g++-6'
 
     - os: linux
@@ -34,7 +34,7 @@ matrix:
           packages:
             - ['g++-7']
             - ninja-build
-            - lcov
+            #- lcov
       env: COMPILER='g++-7'
 
     - os: linux
@@ -45,7 +45,7 @@ matrix:
           packages:
             - ['g++-8']
             - ninja-build
-            - lcov
+            #- lcov
       env: COMPILER='g++-8'
 
 
@@ -71,7 +71,7 @@ matrix:
           packages:
             - ['clang-4.0']
             - ninja-build
-            - lcov
+            #- lcov
       env: COMPILER='clang++-4.0'
 
     - os: linux
@@ -82,7 +82,7 @@ matrix:
           packages:
             - ['clang-5.0']
             - ninja-build
-            - lcov
+            #- lcov
       env: COMPILER='clang++-5.0'
 
     - os: linux
@@ -93,7 +93,7 @@ matrix:
           packages:
             - ['clang-6.0']
             - ninja-build
-            - lcov
+            #- lcov
       env: COMPILER='clang++-6.0'
 
     # Version 7 looks to be too new for Xenial
@@ -112,8 +112,8 @@ matrix:
 before_script:
   - export CXX=${COMPILER}
   - cd ${TRAVIS_BUILD_DIR}
-  - cmake -GNinja -H. -B../Debug-build -DCODE_COVERAGE=ON -DCMAKE_BUILD_TYPE=Debug
-  - cmake -GNinja -H. -B../Release-build -DCODE_COVERAGE=ON -DCMAKE_BUILD_TYPE=Release
+  - cmake -GNinja -H. -B../Debug-build -DCMAKE_BUILD_TYPE=Debug
+  - cmake -GNinja -H. -B../Release-build -DCMAKE_BUILD_TYPE=Release
 
 
 script:
@@ -124,14 +124,14 @@ script:
   - cd ../Release-build
   - ctest -V
 
-after_success:
-  # Create lcov report
-  # capture coverage info
-  - lcov --directory . --capture --output-file coverage.info
-  # filter out system and test files.
-  - lcov --remove coverage.info '/usr/*' '*/tests/*' --output-file coverage.info
-  # output coverage data for debugging (optional)
-  - lcov --list coverage.info
-  # Uploading to CodeCov
-  # '-f' specifies file(s) to use and disables manual coverage gathering and file search which has already been done above
-  - bash <(curl -s https://codecov.io/bash) -f coverage.info || echo "Codecov did not collect coverage reports"
+#after_success:
+#  # Create lcov report
+#  # capture coverage info
+#  - lcov --directory . --capture --output-file coverage.info
+#  # filter out system and test files.
+#  - lcov --remove coverage.info '/usr/*' '*/tests/*' --output-file coverage.info
+#  # output coverage data for debugging (optional)
+#  - lcov --list coverage.info
+#  # Uploading to CodeCov
+#  # '-f' specifies file(s) to use and disables manual coverage gathering and file search which has already been done above
+#  - bash <(curl -s https://codecov.io/bash) -f coverage.info || echo "Codecov did not collect coverage reports"
