Add release builds to circleCI

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,6 +10,16 @@ jobs:
       - run: cmake --build ../Debug-build
       - run: cd ../Debug-build && ctest -V
 
+  build_gcc_release:
+    docker:
+      - image: ubuntu:latest
+    steps:
+      - checkout
+      - run: apt update && apt install -y cmake ninja-build gcc g++
+      - run: cmake -GNinja -H. -B../Release-build -DCMAKE_BUILD_TYPE=Release
+      - run: cmake --build ../Release-build
+      - run: cd ../Release-build && ctest -V
+
   build_clang_debug:
     docker:
       - image: ubuntu:latest
@@ -20,9 +30,22 @@ jobs:
       - run: cmake --build ../Debug-build
       - run: cd ../Debug-build && ctest -V
 
+  build_clang_release:
+    docker:
+      - image: ubuntu:latest
+    steps:
+      - checkout
+      - run: apt update && apt install -y cmake ninja-build clang
+      - run: cmake -GNinja -H. -B../Release-build -DCMAKE_BUILD_TYPE=Release
+      - run: cmake --build ../Release-build
+      - run: cd ../Release-build && ctest -V
+
 workflows:
   version: 2
   build_and_test:
     jobs:
       - build_gcc_debug
+      - build_gcc_release
       - build_clang_debug
+      - build_clang_release
+
