--- a/docs/CMakeLists.txt
+++ b/docs/CMakeLists.txt
@@ -1,20 +1,24 @@
-# check if Doxygen is installed
+# We only get into this file if in Release build mode
+
+# Check if Doxygen is installed
 find_package(Doxygen)
-if (DOXYGEN_FOUND)
-    # set input and output files
+
+if(DOXYGEN_FOUND)
+    # Set input and output files
     set(DOXYGEN_IN ${CMAKE_CURRENT_SOURCE_DIR}/Doxyfile.in)
     set(DOXYGEN_OUT ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile)
 
-    # request to configure the file
     configure_file(${DOXYGEN_IN} ${DOXYGEN_OUT} @ONLY)
-    message(STATUS "Doxygen build started")
+    message(STATUS "Doxygen configuration done")
 
-    # note the option ALL which allows to build the docs together with the application
-    add_custom_target( doc_doxygen ALL
-        COMMAND ${DOXYGEN_EXECUTABLE} ${DOXYGEN_OUT}
-        WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
-        COMMENT "Generating API documentation with Doxygen"
-        VERBATIM )
-else (DOXYGEN_FOUND)
-  message(STATUS "Doxygen need to be installed to generate the doxygen documentation")
-endif (DOXYGEN_FOUND)
+    # Add target to ALL so docs will be built when possible
+    add_custom_target(
+      docs ALL
+      COMMAND ${DOXYGEN_EXECUTABLE} ${DOXYGEN_OUT}
+      WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
+      COMMENT "Generating API documentation with Doxygen"
+      VERBATIM
+      )
+else()
+  message(STATUS "Doxygen needs to be installed to generate the doxygen documentation")
+endif()
