Add doxygen config file and remove building from default target
Have turned off writing to screen as a *lot* of stuff get
written. Will re-enable once in a while to check.

--- a/.gitignore
+++ b/.gitignore
@@ -18,10 +18,13 @@ compile_commands.json
 # Keep files in the images folder
 !images/*
 
-# Option files, however want the version config file, but not the file it creates
+# Option files
 *.in
+# We want the version config file, but not the file it creates
 !include/version.hpp.in
 include/version.hpp
+# We want the doxygen config file
+!docs/Doxyfile.in
 
 # emacs related files
 *~
