Use gcc8 and clang7 at least

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,8 +5,8 @@ jobs:
       - image: ubuntu:bionic
     steps:
       - checkout
-      - run: apt update && apt install -y cmake ninja-build gcc g++
-      - run: cmake -GNinja -H. -B../Debug-build -DCMAKE_BUILD_TYPE=Debug
+      - run: apt update && apt install -y cmake ninja-build gcc g++ gcc-8 g++-8
+      - run: cmake -GNinja -H. -B../Debug-build -DCMAKE_CXX_COMPILER=/usr/bin/g++-8 -DCMAKE_BUILD_TYPE=Debug
       - run: cmake --build ../Debug-build
       - run: cd ../Debug-build && ctest -V
 
@@ -15,8 +15,8 @@ jobs:
       - image: ubuntu:bionic
     steps:
       - checkout
-      - run: apt update && apt install -y cmake ninja-build gcc g++
-      - run: cmake -GNinja -H. -B../Release-build -DCMAKE_BUILD_TYPE=Release
+      - run: apt update && apt install -y cmake ninja-build gcc g++ gcc-8 g++-8
+      - run: cmake -GNinja -H. -B../Release-build -DCMAKE_CXX_COMPILER=/usr/bin/g++-8 -DCMAKE_BUILD_TYPE=Release
       - run: cmake --build ../Release-build
       - run: cd ../Release-build && ctest -V
 
@@ -25,7 +25,7 @@ jobs:
       - image: ubuntu:bionic
     steps:
       - checkout
-      - run: apt update && apt install -y cmake ninja-build clang
+      - run: apt update && apt install -y cmake ninja-build clang-7
       - run: cmake -GNinja -H. -B../Debug-build -DCMAKE_BUILD_TYPE=Debug
       - run: cmake --build ../Debug-build
       - run: cd ../Debug-build && ctest -V
@@ -35,7 +35,7 @@ jobs:
       - image: ubuntu:bionic
     steps:
       - checkout
-      - run: apt update && apt install -y cmake ninja-build clang
+      - run: apt update && apt install -y cmake ninja-build clang-7
       - run: cmake -GNinja -H. -B../Release-build -DCMAKE_BUILD_TYPE=Release
       - run: cmake --build ../Release-build
       - run: cd ../Release-build && ctest -V
