--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -21,7 +21,7 @@ add_executable(${INCH_TEST_NAME} ${TEST_SOURCES} ${IMPLEMENTATION_SOURCES})
 # Where are the header files
 target_include_directories(${INCH_TEST_NAME} PRIVATE ${PROJECT_SOURCE_DIR}/include)
 
-target_link_libraries(${INCH_TEST_NAME} Catch)
+target_link_libraries(${INCH_TEST_NAME} Catch stdc++fs)
 
 add_test(
   NAME allTests
