--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -36,7 +36,7 @@ clang-build-Debug:
   stage: clang-build
 
   script:
-    - apt -y install clang clang-7 clang-8
+    - apt -y install clang clang-8 libstdc++-8-dev
     - cmake -H. -B../build -GNinja -DCMAKE_CXX_COMPILER=/usr/bin/clang++-8 -DCMAKE_BUILD_TYPE=Debug
     - cmake --build ../build
     - cd ../build
@@ -46,7 +46,7 @@ clang-build-Release:
   stage: clang-build
 
   script:
-    - apt -y install clang clang-7 clang-8
+    - apt -y install clang clang-8 libstdc++-8-dev
     - cmake -H. -B../build -GNinja -DCMAKE_CXX_COMPILER=/usr/bin/clang++-8 -DCMAKE_BUILD_TYPE=Release
     - cmake --build ../build
     - cd ../build
