--- a/.travis.yml
+++ b/.travis.yml
@@ -39,16 +39,16 @@ matrix:
     # LLVM/Clang Builds
     # clang <7 does not have std::filesystem
 
-    - os: linux
-      compiler: clang
-      addons:
-        apt:
-          sources: *all_sources
-          packages:
-            - ['clang-7']
-            - ninja-build
-            #- lcov
-      env: COMPILER='clang++-7'
+    #- os: linux
+    #  compiler: clang
+    #  addons:
+    #    apt:
+    #      sources: *all_sources
+    #      packages:
+    #        - ['clang-7']
+    #        - ninja-build
+    #        #- lcov
+    #  env: COMPILER='clang++-7'
 
     - os: linux
       compiler: clang
@@ -58,6 +58,7 @@ matrix:
           packages:
             - ['clang-8']
             - ninja-build
+            - libstdc++-8-dev
             #- lcov
       env: COMPILER='clang++-8'
 
@@ -69,6 +70,7 @@ matrix:
           packages:
             - ['clang-9']
             - ninja-build
+            - libstdc++-8-dev
             #- lcov
       env: COMPILER='clang++-9'
 
