Add clang compilation

--- a/.github/workflows/cmake_build.yml
+++ b/.github/workflows/cmake_build.yml
@@ -4,7 +4,8 @@ on: [push, pull_request]
 
 jobs:
   linux-build:
-    name: Validate GCC v8 compilation
+    # gcc testing
+    name: GCC v8 compilation
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -16,6 +17,24 @@ jobs:
         run: sudo apt update && sudo apt install -y ninja-build gcc-8 g++-8
       - name: Configure
         run: cmake -GNinja -H. -B../Debug-build -DCMAKE_CXX_COMPILER=/usr/bin/g++-8 -DCMAKE_BUILD_TYPE=${{ matrix.type }}
+      - name: Build
+        run: cmake --build ../Debug-build
+      - name: Test
+        run: cd ../Debug-build && ctest -V
+
+    # clang testing
+    name: Clang v8 compilation
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        type: [Debug, Release]
+
+    steps:
+      - uses: actions/checkout@v1
+      - name: Install dependencies
+        run: sudo apt update && sudo apt install -y ninja-build clang clang-8 libstdc++-8-dev
+      - name: Configure
+        run: cmake -GNinja -H. -B../Debug-build -DCMAKE_CXX_COMPILER=/usr/bin/clang++-8 -DCMAKE_BUILD_TYPE=${{ matrix.type }}
       - name: Build
         run: cmake --build ../Debug-build
       - name: Test
