--- a/.github/workflows/cmake_build.yml
+++ b/.github/workflows/cmake_build.yml
@@ -4,38 +4,21 @@ on: [push, pull_request]
 
 jobs:
   linux-build:
-    # gcc testing
-    name: GCC v8 compilation
+    name: Compilation
     runs-on: ubuntu-latest
     strategy:
       matrix:
+        version: [8]
+        compiler: [clang++, g++]
         type: [Debug, Release]
 
     steps:
       - uses: actions/checkout@v1
       - name: Install dependencies
-        run: sudo apt update && sudo apt install -y ninja-build gcc-8 g++-8
+        run: sudo apt update && sudo apt install -y ninja-build gcc-8 g++-8 clang clang-8
       - name: Configure
-        run: cmake -GNinja -H. -B../Debug-build -DCMAKE_CXX_COMPILER=/usr/bin/g++-8 -DCMAKE_BUILD_TYPE=${{ matrix.type }}
+        run: cmake -GNinja -H. -B../Build -DCMAKE_CXX_COMPILER=/usr/bin/${{ matrix.compiler }}-${{ matrix.version }} -DCMAKE_BUILD_TYPE=${{ matrix.type }}
       - name: Build
-        run: cmake --build ../Debug-build
-      - name: Test
-        run: cd ../Debug-build && ctest -V
-
-    # clang testing
-    name: Clang v8 compilation
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        type: [Debug, Release]
-
-    steps:
-      - uses: actions/checkout@v1
-      - name: Install dependencies
-        run: sudo apt update && sudo apt install -y ninja-build clang clang-8 libstdc++-8-dev
-      - name: Configure
-        run: cmake -GNinja -H. -B../Debug-build -DCMAKE_CXX_COMPILER=/usr/bin/clang++-8 -DCMAKE_BUILD_TYPE=${{ matrix.type }}
-      - name: Build
-        run: cmake --build ../Debug-build
+        run: cmake --build ../Build
       - name: Test
         run: cd ../Debug-build && ctest -V
