--- a/.github/workflows/cmake_build.yml
+++ b/.github/workflows/cmake_build.yml
@@ -21,4 +21,4 @@ jobs:
       - name: Build
         run: cmake --build ../Build
       - name: Test
-        run: cd ../Debug-build && ctest -V
+        run: cd ../Build && ctest -V
