Make config even more generic

--- a/.github/workflows/cmake_build.yml
+++ b/.github/workflows/cmake_build.yml
@@ -14,8 +14,9 @@ jobs:
 
     steps:
       - uses: actions/checkout@v1
+        # We currently compile against C++17 so default gcc and clang on ubuntu-latest are too old
       - name: Install dependencies
-        run: sudo apt update && sudo apt install -y ninja-build gcc-8 g++-8 clang clang-8
+        run: sudo apt update && sudo apt install -y ninja-build clang gcc-${{ matrix.version }} g++-${{ matrix.version }} clang-${{ matrix.version }}
       - name: Configure
         run: cmake -GNinja -H. -B../Build -DCMAKE_CXX_COMPILER=/usr/bin/${{ matrix.compiler }}-${{ matrix.version }} -DCMAKE_BUILD_TYPE=${{ matrix.type }}
       - name: Build
