--- a/.github/workflows/cmake_build.yml
+++ b/.github/workflows/cmake_build.yml
@@ -1,6 +1,13 @@
 name: Build Test
 
 on: [push, pull_request]
+  push:
+    paths-ignore:
+      - '*.md'
+      - 'docs/**'
+      - 'data_files/**'
+      - 'images/**'
+      - 'scripts/**'
 
 jobs:
   linux-build:
