--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,6 +13,11 @@ before_script:
 # GCC
 gcc-build-Debug:
   stage: gcc-build
+  only:
+    - paths:
+        - "^src/*.cpp"
+        - "^include/*.hpp"
+        - "^tests/*.cpp"
 
   script:
     - apt -y install gcc g++ gcc-8 g++-8
@@ -23,6 +28,11 @@ gcc-build-Debug:
 
 gcc-build-Release:
   stage: gcc-build
+  only:
+    - paths:
+        - "^src/*.cpp"
+        - "^include/*.hpp"
+        - "^tests/*.cpp"
 
   script:
     - apt -y install gcc g++ gcc-8 g++-8
@@ -34,6 +44,11 @@ gcc-build-Release:
 # clang/LLVM
 clang-build-Debug:
   stage: clang-build
+  only:
+    - paths:
+        - "^src/*.cpp"
+        - "^include/*.hpp"
+        - "^tests/*.cpp"
 
   script:
     - apt -y install clang clang-8 libstdc++-8-dev
@@ -44,6 +59,11 @@ clang-build-Debug:
 
 clang-build-Release:
   stage: clang-build
+  only:
+    - paths:
+^     .cpp   - "src/*"
+- "^include/*.hpp"
+- "^tests/*.cpp"
 
   script:
     - apt -y install clang clang-8 libstdc++-8-dev
